@@ -1,0 +1,5 @@
+[dovecot-iredmail]
+enabled     = true
+filter      = dovecot.iredmail
+action      = PH_FAIL2BAN_ACTION[name=dovecot, port="PH_FAIL2BAN_DISABLED_SERVICES", protocol=tcp]
+logpath     = PH_DOVECOT_LOG_FILE
