@@ -1,0 +1,6 @@
+[roundcube-iredmail]
+enabled     = true
+filter      = roundcube.iredmail
+action      = PH_FAIL2BAN_ACTION[name=roundcube, port="PH_FAIL2BAN_DISABLED_SERVICES", protocol=tcp]
+logpath     = PH_RCM_LOGFILE
+findtime    = 3600
